fixed: save svg size

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
           меня профессию, а также сверстать первый проект.
         </p>
         <div class="article_interactive">
-          <button type="button" class="card__icon-button" aria-label="Понравилось">
+          <button
+            type="button"
+            class="card__icon-button"
+            aria-label="Понравилось"
+          >
             <svg
               class="like-icon"
               width="39"
@@ -82,9 +86,7 @@
         </div>
       </article>
       <article class="article">
-        <h2 class="article_title">
-          1 спринт: Я — чистый лист
-        </h2>
+        <h2 class="article_title">1 спринт: Я — чистый лист</h2>
         <div class="article_image-box">
           <img
             src="./images/1sprint_01.png"
@@ -106,8 +108,11 @@
           казались сложными, далекими и непонятными.
         </p>
         <div class="article_interactive">
-          <button type="button" class="card__icon-button"
-          aria-label="Понравилось">
+          <button
+            type="button"
+            class="card__icon-button"
+            aria-label="Понравилось"
+          >
             <svg
               class="like-icon"
               width="39"
@@ -146,9 +151,7 @@
         </div>
       </article>
       <article class="article">
-        <h2 class="article_title">
-          1 спринт: А если не получится?
-        </h2>
+        <h2 class="article_title">1 спринт: А если не получится?</h2>
         <div class="article_image-box">
           <img
             src="./images/1sprint_02.png"
@@ -169,8 +172,11 @@
           появилось ощущение, что новая профессия становится реальнее.
         </p>
         <div class="article_interactive">
-          <button type="button" class="card__icon-button"
-          aria-label="Понравилось">
+          <button
+            type="button"
+            class="card__icon-button"
+            aria-label="Понравилось"
+          >
             <svg
               class="like-icon"
               width="39"
@@ -209,9 +215,7 @@
         </div>
       </article>
       <article class="article">
-        <h2 class="article_title">
-          2 спринт: Погоня за идеалом
-        </h2>
+        <h2 class="article_title">2 спринт: Погоня за идеалом</h2>
         <div class="article_image-box">
           <img
             src="./images/2sprint_01.png"
@@ -234,8 +238,11 @@
           обучением. Пришлось искать мотивацию, чтобы понять как все успеть.
         </p>
         <div class="article_interactive">
-          <button type="button" class="card__icon-button"
-          aria-label="Понравилось">
+          <button
+            type="button"
+            class="card__icon-button"
+            aria-label="Понравилось"
+          >
             <svg
               class="like-icon"
               width="39"
@@ -274,9 +281,7 @@
         </div>
       </article>
       <article class="article">
-        <h2 class="article_title">
-          2 спринт: О тех, кто рядом
-        </h2>
+        <h2 class="article_title">2 спринт: О тех, кто рядом</h2>
         <div class="article_image-box">
           <img
             src="./images/2sprint_02.png"
@@ -298,8 +303,11 @@
           даже не очень хорошо зная CSS, умеет профессионально дебаггить!
         </p>
         <div class="article_interactive">
-          <button type="button" class="card__icon-button"
-          aria-label="Понравилось">
+          <button
+            type="button"
+            class="card__icon-button"
+            aria-label="Понравилось"
+          >
             <svg
               class="like-icon"
               width="39"
@@ -338,9 +346,7 @@
         </div>
       </article>
       <article class="article">
-        <h2 class="article_title">
-          3 спринт: Обходные стратегии
-        </h2>
+        <h2 class="article_title">3 спринт: Обходные стратегии</h2>
         <div class="article_image-box">
           <img
             src="./images/3sprint_01.png"
@@ -361,8 +367,11 @@
           магии CSS.
         </p>
         <div class="article_interactive">
-          <button type="button" class="card__icon-button"
-          aria-label="Понравилось">
+          <button
+            type="button"
+            class="card__icon-button"
+            aria-label="Понравилось"
+          >
             <svg
               class="like-icon"
               width="39"
@@ -401,9 +410,7 @@
         </div>
       </article>
       <article class="article">
-        <h2 class="article_title">
-          3 спринт: Когда опускаются руки
-        </h2>
+        <h2 class="article_title">3 спринт: Когда опускаются руки</h2>
         <div class="article_image-box">
           <img
             src="./images/3sprint_02.png"
@@ -426,8 +433,11 @@
           конце, сама или с помощью мужа, наставника и тех поддержки.
         </p>
         <div class="article_interactive">
-          <button type="button" class="card__icon-button"
-          aria-label="Понравилось">
+          <button
+            type="button"
+            class="card__icon-button"
+            aria-label="Понравилось"
+          >
             <svg
               class="like-icon"
               width="39"
@@ -466,9 +476,7 @@
         </div>
       </article>
       <article class="article">
-        <h2 class="article_title">
-          «Сейчас я здесь»
-        </h2>
+        <h2 class="article_title">«Сейчас я здесь»</h2>
         <div class="article_image-box">
           <img
             src="./images/now.jpg"
@@ -492,8 +500,11 @@
           интересно что же нас ждет впереди!
         </p>
         <div class="article_interactive">
-          <button type="button" class="card__icon-button"
-          aria-label="Понравилось">
+          <button
+            type="button"
+            class="card__icon-button"
+            aria-label="Понравилось"
+          >
             <svg
               class="like-icon"
               width="39"
@@ -546,13 +557,9 @@
         <dialog id="dialog-save" class="dialog-save">
           <div class="dialog-info">
             <svg class="save-svg dialog-save-svg" viewBox="0 0 29 28">
-              <use href="./svg/floppy.svg#floppy"/>
+              <use href="./svg/floppy.svg#floppy" />
             </svg>
-            <p class="dialog__text"
-              >Вставьте
-              дискету, чтобы
-              продолжить</p
-            >
+            <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
           </div>
           <button
             type="button"
