fixed: validated files

--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
             onclick="window['dialog-save'].close();"
             aria-controls="dialog-save"
           >
-            <p class="button__text">ok</p>
+            <span class="button__text">ok</span>
           </button>
         </dialog>
       </div>
