fixed: fonts path, text

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </svg>
           </button>
           <button type="button" class="button card__like-button">
-            <span class="button__text">like</span>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
@@ -93,7 +93,7 @@
             class="article_image grayscale-darker"
             alt="Дерево на заснеженном поле"
           />
-          <p class="lable">&lt;EXCITED&gt;</p>
+          <p class="lable">&lt;excited&gt;</p>
         </div>
         <p class="article_text">
           На первых этапах мы работали со страхами и сомнениями, которые часто
@@ -146,7 +146,7 @@
             </svg>
           </button>
           <button type="button" class="button card__like-button">
-            <span class="button__text">like</span>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
@@ -210,7 +210,7 @@
             </svg>
           </button>
           <button type="button" class="button card__like-button">
-            <span class="button__text">like</span>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
@@ -276,7 +276,7 @@
             </svg>
           </button>
           <button type="button" class="button card__like-button">
-            <span class="button__text">like</span>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
@@ -341,7 +341,7 @@
             </svg>
           </button>
           <button type="button" class="button card__like-button">
-            <span class="button__text">like</span>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
@@ -405,7 +405,7 @@
             </svg>
           </button>
           <button type="button" class="button card__like-button">
-            <span class="button__text">like</span>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
@@ -471,7 +471,7 @@
             </svg>
           </button>
           <button type="button" class="button card__like-button">
-            <span class="button__text">like</span>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
@@ -538,7 +538,7 @@
             </svg>
           </button>
           <button type="button" class="button card__like-button">
-            <span class="button__text">like</span>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
